[metadata]
name = telemetry_tool
version = 0.1.0
author = Elena Kotlyarova
author_email = elenakotlyrova@gmail.com
description = Telemetry parser and visualization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nimeriya778/telemetry-tool
keywords = telemetry

[options]
packages = telemetry_tool
python_requires = >=3.6
zip_safe = True
package_dir =
    = src
install_requires =
    matplotlib ~=3.5.1
